added new metadata endpoints e compliance levels management